[gd_scene load_steps=22 format=3 uid="uid://jpq7ows0ukex"]

[ext_resource type="Texture2D" uid="uid://bblkjwg06v88k" path="res://assets/sprites/sprites.png" id="1_7k104"]
[ext_resource type="Script" uid="uid://d1e70iil31xhh" path="res://scripts/enemy.gd" id="1_md0e3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_7k104")
region = Rect2(16, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 256, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k104"]
atlas = ExtResource("1_7k104")
region = Rect2(96, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqyl"]
atlas = ExtResource("1_7k104")
region = Rect2(112, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wujgv"]
atlas = ExtResource("1_7k104")
region = Rect2(128, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb8ge"]
atlas = ExtResource("1_7k104")
region = Rect2(144, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1ltt"]
atlas = ExtResource("1_7k104")
region = Rect2(160, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gyqm"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qi2p4"]
atlas = ExtResource("1_7k104")
region = Rect2(16, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iifgy"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_epg4t"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_doop2"]
atlas = ExtResource("1_7k104")
region = Rect2(0, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("1_7k104")
region = Rect2(16, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("1_7k104")
region = Rect2(32, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("1_7k104")
region = Rect2(48, 272, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ar8e5")
}],
"loop": true,
"name": &"back",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k104")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wujgv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb8ge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1ltt")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gyqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qi2p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iifgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epg4t")
}],
"loop": true,
"name": &"front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_doop2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}],
"loop": true,
"name": &"side",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7k104"]
size = Vector2(15.5, 15.5)

[node name="Enemy" type="Area2D"]
collision_layer = 33
collision_mask = 31
script = ExtResource("1_md0e3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3yqyl")
animation = &"side"
frame_progress = 0.124535

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7k104")
one_way_collision_margin = 0.0

[node name="TimerEnemy" type="Timer" parent="."]
wait_time = 2.739

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="TimerEnemy" to="." method="_on_timer_enemy_timeout"]
